<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2ADelivery</string>
    <string name="welcomestring">2A Delivery</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_levels_menu">LevelsMenuActivity</string>
    <string name="button_binary_levels">Binary Levels</string>
    <string name="button_hex_levels">Hex Levels</string>

    <string name="action_settings">Settings</string>
    <string name="button_settings">Settings</string>
    <string name="quitButton">Quit</string>

    <string name="button_level1">0001</string>
    <string name="button_level2">0010</string>
    <string name="button_level3">0011</string>
    <string name="button_level4">0100</string>
    <string name="button_level5">0101</string>
    <string name="button_level6">0110</string>
    <string name="button_level7">0111</string>
    <string name="button_level8">1000</string>
    <string name="button_level9">1001</string>
    <string name="button_level10">1010</string>
    <string name="button_level11">1011</string>
    <string name="button_level12">1100</string>

    <string name="button_binary0">0</string>
    <string name="button_binary1">1</string>
    <string name="button_levelsSubmit">Submit!</string>
    <string name="text_levelTitle">Level:</string>
    <string name="text_levelsCountdown">00.0</string>
    <string name="confirm_registry">Email not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loginToast">Logged In!</string>
    <string name="button_login">Login</string>
    <string name="text_AddressDec">Address</string>
    <string name="text_levelsNum">(num)</string>
    <string name="title_activity_level_template">LevelTemplateActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="button_clearInput">Clear</string>
    <string name="level_zen">Zen</string>
    <string name="preference_file_key">juliangarcia.PREFERENCE_FILE_KEY</string>
    <string name="level_tutorial">Tutorial</string>
    <string name="hex_levels_list">Hex Levels</string>
    <string name="binary_levels_list">Binary Levels</string>
    <string name="text_hydrocoin">HYDROCOIN</string>
    <string name="text_drivers">DRIVERS</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="button_level_store">Supply Store</string>
    <string name="text_stats_title">Statistics</string>
    <string name="text_title_timesplayed">Games Played:</string>
    <string name="text_timesplayed">Games Played:</string>
    <string name="dialog_level_start">Start</string>
    <string name="dialog_level_cancel">Cancel</string>
    <string name="button_return_level_menu">Return To Menu</string>
    <string name="title_activity_binary_tutorial">BinaryTutorialActivity</string>
</resources>
