<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="juliangarcia.twoadelivery.LevelsActivity">

    <RelativeLayout
        android:layout_width="500sp"
        android:layout_height="150sp"
        android:id="@+id/parcel"
        android:background="#ff6d4d2c"
        android:layout_below="@+id/text_levelsNum"
        android:layout_centerHorizontal="true">
    </RelativeLayout>

    <TextView android:text="@string/text_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_levelsNum"
        android:layout_alignParentTop="true"
        android:textSize="25sp"/>

    <TextView android:text="@string/text_levelsCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_levelsCountdown"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textSize="25sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_binary0"
        android:layout_below="@+id/parcel"
        android:layout_toRightOf="@+id/text_levelsNum"
        android:layout_toLeftOf="@+id/text_levelsCountdown"
        android:layout_toStartOf="@+id/text_levelsCountdown">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_binary0"
            android:id="@+id/button_binary0"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_binary1"
            android:id="@+id/button_binary1"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom" />
    </LinearLayout>

</RelativeLayout>
